--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
     <script src="js/App.js"></script>
     <script src="js/Services.js"></script>
     <script src="js/Controllers/MainController.js"></script>
+    <script src="js/Controllers/CVController.js"></script>
 
 </head>
 <body ng-app="HomeApp">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href="#/main">Home</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">CV</a></li>
+                    <li><a href="#/cv">CV</a></li>
                 </ul>
             </div>
         </div>
