setting up controllers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Egill Sveinbjörnsson</title>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="bower_components/angular/angular.min.js"></script>
 
@@ -28,9 +29,6 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#/main">Home</a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="#/cv">CV</a></li>
                 </ul>
