minor text fixes

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <header>
                                 <img src="img/ru.png" />
                                 <h1 class="none">Reykjavík University</h1>
-                                <span class="description">Whiteboard</span>
+                                <span class="description">PandaBase</span>
                                 <span class="duration">
                                     <time>april 2015</time>
                                 </span>
@@ -325,7 +325,7 @@
                     <div class="panel-body">
                         <article class="">
                             <p>
-                                My name is Egill, I am 23 years old and am a computer science student at Reykjavík University in Iceland. A typical day in my life involves doing school projects, going to the gym, and spend time with my girl and my friends and family.
+                                My name is Egill, I am 23 years old and am a computer science student at Reykjavík University in Iceland. A typical day in my life involves doing school projects, going to the gym and spend time with my loved ones.
                             </p>
 
                             <p>
@@ -333,8 +333,7 @@
                             </p>
 
                             <p>
-                                What I love doing is going out with my favorite people, eating awesome food, listening to music, solving programming puzzles, writing beautiful code and lifting weights. I started doing BootCamp in 2008, then after a few years BootCamp opened a CrossFit box called CrossFitBC, that was in late 2010. I changed over to CrossFit and did that for about 3 years, or until I injured my back. Since then I have been what I can, mostly weight lifting.
-                            </p>
+                                What I love doing is going out with my favorite people, eating awesome food, listening to music, solving programming puzzles, writing beautiful code and lifting weights. I started doing BootCamp in 2008, then after a few years BootCamp opened a CrossFit box called CrossFitBC, that was in late 2010. I changed over to CrossFit and did that for about 3 years, or until I injured my back. Since then I have been what I can, mostly weight lifting. </p>
                         </article>
                     </div>
                 </div>
