--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                             </header>
                             <div class="content">
                                 <p>
-                                    Finished the Windows XP to Windows 7 transition for Icelandair in Keflavik (february 2012 - march 2012). Worked as a field service technician and was assisting Icelandair Group (and subsidiaries) employees with technical problems (april 2012 - august 2013, summer 2014 and summer 2015).
+                                    Finished the Windows XP to Windows 7 transition for Icelandair in Keflavik (february 2012 - march 2012). Worked as a field service technician and was assisting Icelandair Group (and subsidiaries) employees with technical problems (april 2012 - august
+                                    2013, summer 2014 and summer 2015).
                                 </p>
 
                                 <div class="recommendations">
@@ -213,7 +214,8 @@
                             </header>
                             <div class="content">
                                 <p>
-                                    A server written in Python 3.4 using the Flask microframework. It's a server that automatically grades solutions sent in by students. It's a project I made in a Python course. The real Mooshak is a system that Reykjavík University uses to grade solutions by students and gives feedback. The problem descriptions were taken from the real Mooshak and Kattis. See the projects GitHub page for more information.
+                                    A server written in Python 3.4 using the Flask microframework. It's a server that automatically grades solutions sent in by students. It's a project I made in a Python course. The real Mooshak is a system that Reykjavík University uses to grade solutions
+                                    by students and gives feedback. The problem descriptions were taken from the real Mooshak and Kattis. See the projects GitHub page for more information.
                                 </p>
                             </div>
                         </article>
@@ -233,7 +235,8 @@
                             </header>
                             <div class="content">
                                 <p>
-                                    A game written purely using HTML5, CSS3 and JS. A clone of the popular Flappybird game. All graphics are hardware accelerated so the game is very smooth. The bird and pipe images were found on Google, the rest I created. See the projects GitHub page to see the implementation. This was a project for Web Programming at RU.
+                                    A game written purely using HTML5, CSS3 and JS. A clone of the popular Flappybird game. All graphics are hardware accelerated so the game is very smooth. The bird and pipe images were found on Google, the rest I created. See the projects GitHub page to
+                                    see the implementation. This was a project for Web Programming at RU.
                                 </p>
                             </div>
                         </article>
@@ -253,7 +256,8 @@
                             </header>
                             <div class="content">
                                 <p>
-                                    An HTML5 Canvas application, written using the canvas HTML5 element. Object oriented programming was used for this project. Bootstrap was used for the overall look, plus a little bit extra for the fullscreen canvas. This project was for a Web Programming course spring semester 2015 at RU.
+                                    An HTML5 Canvas application, written using the canvas HTML5 element. Object oriented programming was used for this project. Bootstrap was used for the overall look, plus a little bit extra for the fullscreen canvas. This project was for a Web Programming
+                                    course spring semester 2015 at RU.
                                 </p>
                             </div>
                         </article>
@@ -272,7 +276,8 @@
                             </header>
                             <div class="content">
                                 <p>
-                                    A project from three week course at Reykjavik University. A web system where users could upload and download subtitles (in the srt format) for movies and TV shows. On the website, every user could download subtitles but only registered users could modify and upload subtitles. The system was written in Visual Studio using MVC. Websites were written in HTML5 and the form to change subtitles was done with JavaScript and jQuery.
+                                    A project from three week course at Reykjavik University. A web system where users could upload and download subtitles (in the srt format) for movies and TV shows. On the website, every user could download subtitles but only registered users could modify
+                                    and upload subtitles. The system was written in Visual Studio using MVC. Websites were written in HTML5 and the form to change subtitles was done with JavaScript and jQuery.
                                 </p>
                             </div>
                         </article>
@@ -286,33 +291,47 @@
                         <h3 class="panel-title">Technical</h3>
                     </div>
                     <div class="panel-body">
-                        <dl class="skills">
-                            <div>
-                                <dt>Databases:</dt>
-                                <dd>MySQL</dd>
-                                <br>
-                            </div>
-                            <div>
-                                <dt>Methods:</dt>
-                                <dd>Lean, Agile, Scrum, Dynamic Programming</dd>
-                                <br>
-                            </div>
-                            <div>
-                                <dt>Programming:</dt>
-                                <dd>C++, Python, JavaScript, Java, C#</dd>
-                                <br>
-                            </div>
-                            <div>
-                                <dt>Tools:</dt>
-                                <dd>Vim, Nano, Sublime Text, Excel, Word, PowerPoint, TeX, Git</dd>
-                                <br>
-                            </div>
-                            <div>
-                                <dt>Web:</dt>
-                                <dd>HTML, CSS, jQuery, AngularJS, Flask</dd>
-                                <br>
-                            </div>
-                        </dl>
+                        <h5 class="list-description">Databases</h5>
+                        <ul class="list-inline">
+                            <li>MySQL</li>
+                        </ul>
+
+                        <h5 class="list-description">Methods</h5>
+                        <ul class="list-inline">
+                            <li>MySQL</li>
+                            <li>Lean</li>
+                            <li>Agile</li>
+                            <li>Scrum</li>
+                            <li>Dynamic Programming</li>
+                        </ul>
+
+                        <h5 class="list-description">Programming</h5>
+                        <ul class="list-inline">
+                            <li>C++</li>
+                            <li>Python</li>
+                            <li>JavaScript</li>
+                            <li>Java</li>
+                            <li>C#</li>
+                        </ul>
+
+                        <h5 class="list-description">Tools</h5>
+                        <ul class="list-inline">
+                            <li>Vim</li>
+                            <li>Nano</li>
+                            <li>Atom</li>
+                            <li>Sublime Text</li>
+                            <li>TeX</li>
+                            <li>Git</li>
+                        </ul>
+
+                        <h5 class="list-description">Web</h5>
+                        <ul class="list-inline">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>jQuery</li>
+                            <li>AngularJS</li>
+                            <li>Flask</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -333,7 +352,7 @@
                             </p>
 
                             <p>
-                                What I love doing is going out with my favorite people, eating awesome food, listening to music, solving programming puzzles, writing beautiful code and lifting weights. I started doing BootCamp in 2008, then after a few years BootCamp opened a CrossFit box called CrossFitBC, that was in late 2010. I changed over to CrossFit and did that for about 3 years, or until I injured my back. Since then I have been what I can, mostly weight lifting. </p>
+                                What I love doing is going out with my favorite people, eating awesome food, listening to music, solving programming puzzles, writing beautiful code and lifting weights.</p>
                         </article>
                     </div>
                 </div>
