added icons for projects

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <article class="cv-item">
                         <header>
                             <img src="img/ru.png" />
-                            <h1 class="none">Reykjavík University</h1>
+                            <h1>Reykjavík University</h1>
                             <span class="duration">
                                 <time>2013 - 2016</time>
                             </span>
@@ -68,7 +68,7 @@
                     <article class="cv-item">
                         <header>
                             <img src="img/fb.png" />
-                            <h1 class="none">Community College of Breiðholt</h1>
+                            <h1>Community College of Breiðholt</h1>
                             <span class="duration">
                                 <time>2007 - 2011</time>
                             </span>
@@ -91,7 +91,7 @@
                         <article class="cv-item">
                             <header>
                                 <img src="img/nyherji.png" />
-                                <h1 class="none">Nýherji</h1>
+                                <h1>Nýherji</h1>
                                 <span class="description">Field Service Technician</span>
                                 <span class="duration">
                                     <time>february 2012 - august 2013, summer '14 &amp; '15</time>
@@ -117,7 +117,7 @@
                         <article class="cv-item">
                             <header>
                                 <img src="img/crawford.png" />
-                                <h1 class="none">Hurðaborg / Crawford-hurðir</h1>
+                                <h1>Hurðaborg / Crawford-hurðir</h1>
                                 <span class="description">Contractor</span>
                                 <span class="duration">
                                     <time>june 2012 - july 2012</time>
@@ -142,7 +142,7 @@
                         <article class="cv-item">
                             <header>
                                 <img src="img/or.png" />
-                                <h1 class="none">Orkuveita Reykjavíkur</h1>
+                                <h1>Orkuveita Reykjavíkur</h1>
                                 <span class="description">Summer employee</span>
                                 <span class="duration">
                                     <time>summer '08, '09, '10 &amp; '11</time>
@@ -158,7 +158,7 @@
                         <article class="cv-item">
                             <header>
                                 <img src="img/fridays.png" />
-                                <h1 class="none">T.G.I. Friday’s</h1>
+                                <h1>T.G.I. Friday’s</h1>
                                 <span class="description">Busboy</span>
                                 <span class="duration">
                                     <time>june 2007 - february 2008</time>
@@ -174,7 +174,7 @@
                         <article class="cv-item">
                             <header>
                                 <img src="img/reykjavik.png" />
-                                <h1 class="none">City of Reykjavík</h1>
+                                <h1>City of Reykjavík</h1>
                                 <span class="description">Summer employee</span>
                                 <span class="duration">
                                     <time>summer '05, '06 &amp; '07</time>
@@ -183,9 +183,6 @@
                             <div class="content">
                                 <p>
                                     Work-school: general work. Recognition for punctuality and efficiency.
-                                    <br>
-                                    <br>
-                                    <br>
                                 </p>
                             </div>
                         </article>
@@ -201,9 +198,29 @@
                     <div class="panel-body">
                         <article class="cv-item">
                             <header>
-                                <img src="img/ru.png" />
-                                <h1 class="none">Reykjavík University</h1>
-                                <span class="description">Mini Mooshak</span>
+                                <img src="img/flask.png" />
+                                <h1>Invictus Competition</h1>
+                                <span class="description">Reykjavík University</span>
+                                <span class="duration">
+                                    <time>june 2015</time>
+                                </span>
+                                <ul class="link-list">
+                                    <li class="link-item"><a href="http://invictus.spagli.io/">Live</a></li>
+                                    <li class="link-item"><a href="https://github.com/egilsster/InvictusCompetition">GitHub</a></li>
+                                </ul>
+                            </header>
+                            <div class="content">
+                                <p>
+                                    Simple scraper that goes to <a href="http://www.crossfitinvictus.com/category/wod/competition/">here</a> and takes the workout HTML directly and displays it in a simple web application. Developed using Flask, API functions written in Flask aswell as this is that small of a project. A little JavaScript was used for the paging functionality.
+                                </p>
+                            </div>
+                        </article>
+
+                        <article class="cv-item">
+                            <header>
+                                <img src="img/flask.png" />
+                                <h1>Mini Mooshak</h1>
+                                <span class="description">Reykjavík University</span>
                                 <span class="duration">
                                     <time>may 2015</time>
                                 </span>
@@ -222,9 +239,9 @@
 
                         <article class="cv-item">
                             <header>
-                                <img src="img/ru.png" />
-                                <h1 class="none">Reykjavík University</h1>
-                                <span class="description">FlappyBird</span>
+                                <img src="img/javascript.png" />
+                                <h1>FlappyBird</h1>
+                                <span class="description">Reykjavík University</span>
                                 <span class="duration">
                                     <time>march 2015</time>
                                 </span>
@@ -243,9 +260,39 @@
 
                         <article class="cv-item">
                             <header>
-                                <img src="img/ru.png" />
-                                <h1 class="none">Reykjavík University</h1>
-                                <span class="description">Whiteboard</span>
+                                <img src="img/angular.png" />
+                                <h1>Evaluation App</h1>
+                                <span class="description">Reykjavík University</span>
+                                <ul class="link-list">
+                                    <li class="link-item"><a href="https://github.com/egilsster/Angular-EvaluationApp">GitHub</a></li>
+                                </ul>
+                            </header>
+                            <div class="content">
+                                <p>Single-Page App (SPA) in AngularJS. Allows admin/teacher to create question templates and fill them with questions (text, true/false, and multiple choice). This form then becomes available to the users/students and once
+                                    the form has been filled out, it can be submitted anonymously and only viewable by the admin/teacher</p>
+                            </div>
+                        </article>
+
+                        <article class="cv-item">
+                            <header>
+                                <img src="img/angular.png" />
+                                <h1>Chatserver</h1>
+                                <span class="description">Reykjavík University</span>
+                                <ul class="link-list">
+                                    <li class="link-item"><a href="https://github.com/egilsster/Angular-Chatserver">GitHub</a></li>
+                                </ul>
+                            </header>
+                            <div class="content">
+                                <p>Chat Application using AngularJS and Socket.IO along with a server written in Node.js. Users are able to create rooms other users can join an chat, user that created the room is automatically admin and can make other admins.
+                                    Includes features such as kicking, banning and private messaging</p>
+                            </div>
+                        </article>
+
+                        <article class="cv-item">
+                            <header>
+                                <img src="img/html5.png" />
+                                <h1>Whiteboard</h1>
+                                <span class="description">Reykjavík University</span>
                                 <span class="duration">
                                     <time>january 2015</time>
                                 </span>
@@ -264,9 +311,9 @@
 
                         <article class="cv-item">
                             <header>
-                                <img src="img/ru.png" />
-                                <h1 class="none">Reykjavík University</h1>
-                                <span class="description">PandaBase</span>
+                                <img src="img/asp.png" />
+                                <h1>PandaBase</h1>
+                                <span class="description">Reykjavík University</span>
                                 <span class="duration">
                                     <time>april 2015</time>
                                 </span>
