--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <header>
                                 <img src="img/flask.png" />
                                 <h1>Invictus Competition</h1>
-                                <span class="description">Reykjavík University</span>
+                                <span class="description">Freelance</span>
                                 <span class="duration">
                                     <time>june 2015</time>
                                 </span>
