added live link for evaluation app

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
                                 <h1>Evaluation App</h1>
                                 <span class="description">Reykjavík University</span>
                                 <ul class="link-list">
+                                    <li class="link-item"><a href="http://evaluation.spagli.io/">Live</a></li>
                                     <li class="link-item"><a href="https://github.com/egilsster/Angular-EvaluationApp">GitHub</a></li>
                                 </ul>
                             </header>
