live link for chat app

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                                 <h1>Chatserver</h1>
                                 <span class="description">Reykjavík University</span>
                                 <ul class="link-list">
+                                    <li class="link-item"><a href="http://chat.spagli.io/">Live</a></li>
                                     <li class="link-item"><a href="https://github.com/egilsster/Angular-Chatserver">GitHub</a></li>
                                 </ul>
                             </header>
