--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 class="site-title">Egill Sveinbjörnsson</h1>
 
             <span>+354 616 8622 | </span>
-            <span><a href="mailto:egilsster@gmail.com">egilsster@gmail.com</a></span>
+            <span><a href="mailto:egilsster@gmail.com">egillsveinbjorns@gmail.com</a></span>
         </center>
 
         <section class="cv" id="cv">
