--- a/index.html
+++ b/index.html
@@ -154,38 +154,6 @@
                                 </p>
                             </div>
                         </article>
-
-                        <article class="cv-item">
-                            <header>
-                                <img src="img/fridays.png" />
-                                <h1>T.G.I. Friday’s</h1>
-                                <span class="description">Busboy</span>
-                                <span class="duration">
-                                    <time>june 2007 - february 2008</time>
-                                </span>
-                            </header>
-                            <div class="content">
-                                <p>
-                                    Handed customers their dishes from the kitchen, cleaned tables and helped with everything that was needed.
-                                </p>
-                            </div>
-                        </article>
-
-                        <article class="cv-item">
-                            <header>
-                                <img src="img/reykjavik.png" />
-                                <h1>City of Reykjavík</h1>
-                                <span class="description">Summer employee</span>
-                                <span class="duration">
-                                    <time>summer '05, '06 &amp; '07</time>
-                                </span>
-                            </header>
-                            <div class="content">
-                                <p>
-                                    Work-school: general work. Recognition for punctuality and efficiency.
-                                </p>
-                            </div>
-                        </article>
                     </div>
                 </div>
             </div>
@@ -196,6 +164,25 @@
                         <h3 class="panel-title">Projects</h3>
                     </div>
                     <div class="panel-body">
+                        <article class="cv-item">
+                            <header>
+                                <img src="img/meanio.png" />
+                                <h1>MEANPanda</h1>
+                                <span class="description">Freelance</span>
+                                <span class="duration">
+                                    <time>july 2015</time>
+                                </span>
+                                <ul class="link-list">
+                                    <li class="link-item"><a href="https://github.com/egilsster/MEANPanda">GitHub</a></li>
+                                </ul>
+                            </header>
+                            <div class="content">
+                                <p>
+                                    Rewrite of the ASP.net project PandaBase which I made in a 3 week course at Reykjavik University. I wanted to write it using AngularJS and needed a side project for the summer. I chose the <a href="http://mean.io/#!/">MEAN.io</a> stack since it was easy to get started using that. Users can register for an account, which allowes them to create subtitle requests, upload subtitles, download subtitles and more.
+                                </p>
+                            </div>
+                        </article>
+
                         <article class="cv-item">
                             <header>
                                 <img src="img/flask.png" />
