--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             </header>
                             <div class="content">
                                 <p>
-                                    Rewrite of the ASP.net project PandaBase which I made in a 3 week course at Reykjavik University. I wanted to write it using AngularJS and needed a side project for the summer. I chose the <a href="http://mean.io/#!/">MEAN.io</a> stack since it was easy to get started using that. Users can register for an account, which allowes them to create subtitle requests, upload subtitles, download subtitles and more.
+                                    Rewrite of the ASP.net project PandaBase which I made in a 3 week course at Reykjavik University. I wanted to write it using AngularJS and needed a side project for the summer. I chose the <a href="http://mean.io/#!/">MEAN.io</a> stack since it was easy to get started using that. Users can register for an account, which allows them to create subtitle requests, upload subtitles, download subtitles and more.
                                 </p>
                             </div>
                         </article>
