--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <center class="site-header">
             <h1 class="site-title">Egill Sveinbjörnsson</h1>
 
-            <span>+354 616 8622 | </span>
-            <span><a href="mailto:egilsster@gmail.com">egillsveinbjorns@gmail.com</a></span>
+            <a href="mailto:egillsveinbjorns@gmail.com">egillsveinbjorns@gmail.com</a>
         </center>
 
         <section class="cv" id="cv">
