--- a/index.html
+++ b/index.html
@@ -2,46 +2,41 @@
 <html>
 
 <head>
+    <title>Egill Sveinbjörnsson</title>
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="&nbsp;" />
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
 
-
-    <title>Egill Sveinbjörnsson</title>
+    <link href="img/favicon.ico" rel="shortcut icon">
+    <link href="img/touch.png" rel="apple-touch-icon-precomposed" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="container-fluid">
-        <center class="site-header">
-            <h1 class="site-title">Egill Sveinbjörnsson</h1>
+        <div class="canvas">
+            <div class="canvascontainer">
+                <span class="topborder"></span>
+                <div class="about">
+                    <p class="bold">
+                        Hæ, I'm <a href="https://www.facebook.com/egilsster">Egill</a> — I am 23 years old and am a computer science student at <a href="http://www.ru.is/">Reykjavík University</a> in Iceland.
+                    </p>
 
-            <a href="mailto:egillsveinbjorns@gmail.com">egillsveinbjorns@gmail.com</a>
-        </center>
+                    <p class="normal">
+                        I am a neatfreak, I have to have my working enviroment clean. A cluttered desk is like a cluttered mind. What I love doing is going out with my favorite people, eating awesome food, listening to music, solving programming puzzles, <a href="https://github.com/egilsster">writing beautiful code</a> and lifting weights.
+                    </p>
+
+                    <p class="footer light">
+                        Contact me: <a href="mailto:egillsveinbjorns@gmail.com">egillsveinbjorns@gmail.com</a>
+                    </p>
+                </div>
+
+            </div>
+        </div>
 
         <section class="cv" id="cv">
             <h1 class="section-heading">CV</h1>
@@ -370,44 +365,10 @@
                     </div>
                 </div>
             </div>
-
-            <div class="cv-group">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">About me</h3>
-                    </div>
-                    <div class="panel-body">
-                        <article class="">
-                            <p>
-                                My name is Egill, I am 23 years old and am a computer science student at Reykjavík University in Iceland. A typical day in my life involves doing school projects, going to the gym and spend time with my loved ones.
-                            </p>
-
-                            <p>
-                                I am a neatfreak, I have to have my working enviroment clean. A cluttered desk is like a cluttered mind.
-                            </p>
-
-                            <p>
-                                What I love doing is going out with my favorite people, eating awesome food, listening to music, solving programming puzzles, writing beautiful code and lifting weights.</p>
-                        </article>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <hr>
 
-        <footer>
-            <p>
-                <a class="iconlink" href="https://www.facebook.com/egilsster">
-                    <span class="icons icon-facebook2"></span>&nbsp;&nbsp;</a>
-                <a class="iconlink" href="https://twitter.com/egilsster">
-                    <span class="icons icon-twitter2"></span>&nbsp;&nbsp;</a>
-                <a class="iconlink" href="https://www.linkedin.com/pub/egill-sveinbj%C3%B6rnsson/79/501/296">
-                    <span class="icons icon-linkedin"></span>&nbsp;&nbsp;</a>
-                <a class="iconlink" href="https://github.com/egilsster">
-                    <span class="icons icon-github"></span>&nbsp;&nbsp;</a>
-            </p>
-        </footer>
     </div>
 </body>
 
