--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
 
                 <p class="normal">
-                    I like <a href="https://github.com/egilsster">writing beautiful code</a>, web development, music and weight lifting.
+                    I like writing <a href="https://github.com/egilsster">code</a>, web development, music and weight lifting.
                 </p>
 
                 <p class="footer light">
