changed to sass precompiler

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="container-fluid">
         <section class="cv" id="cv">
-            <h1>Curriculum Vitaé</h1>
+            <h1>Curriculum Vitae</h1>
 
             <div class="cv-group">
                 <h2>Education</h2>
