changed to sass precompiler

--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
                     </header>
                     <div class="content">
                         <p>
-                            A server written in Python 3.4 using the Flask microframework. It's a server that automatically grades solutions sent in by students. It's a project I made in a Python course. The real Mooshak is a system that Reykjavík University uses to grade solutions
-                            by students and gives feedback. The problem descriptions were taken from the real Mooshak and Kattis. See the projects GitHub page for more information.
+                            A server written in Python 3.4 using the Flask microframework. It's a server that automatically grades solutions sent in by students. It's a project I made in a Python course. The real Mooshak is a system that Reykjavík University uses to grade solutions by students and gives feedback. The problem descriptions were taken from the real Mooshak and Kattis. See the projects GitHub page for more information.
                         </p>
                     </div>
                 </article>
@@ -223,8 +222,7 @@
                     </header>
                     <div class="content">
                         <p>
-                            A game written purely using HTML5, CSS3 and JS. A clone of the popular Flappybird game. All graphics are hardware accelerated so the game is very smooth. The bird and pipe images were found on Google, the rest I created. See the projects GitHub page to
-                            see the implementation. This was a project for Web Programming at RU.
+                            A game written purely using HTML5, CSS3 and JS. A clone of the popular Flappybird game. All graphics are hardware accelerated so the game is very smooth. The bird and pipe images were found on Google, the rest I created. See the projects GitHub page to see the implementation. This was a project for Web Programming at RU.
                         </p>
                     </div>
                 </article>
@@ -241,7 +239,7 @@
                     </header>
                     <div class="content">
                         <p>Single-Page App (SPA) in AngularJS. Allows admin/teacher to create question templates and fill them with questions (text, true/false, and multiple choice). This form then becomes available to the users/students and once the form
-                            has been filled out, it can be submitted anonymously and only viewable by the admin/teacher</p>
+                            has been filled out, it can be submitted anonymously and only viewable by the admin/teacher.</p>
                     </div>
                 </article>
 
@@ -256,8 +254,8 @@
                         </ul>
                     </header>
                     <div class="content">
-                        <p>Chat Application using AngularJS and Socket.IO along with a server written in Node.js. Users are able to create rooms other users can join an chat, user that created the room is automatically admin and can make other admins. Includes
-                            features such as kicking, banning and private messaging</p>
+                        <p>
+                            Chat Application using AngularJS and Socket.IO along with a server written in Node.js. Users are able to create rooms other users can join an chat, user that created the room is automatically admin and can make other admins. Includes features such as kicking, banning and private messaging.</p>
                     </div>
                 </article>
 
@@ -276,8 +274,7 @@
                     </header>
                     <div class="content">
                         <p>
-                            An HTML5 Canvas application, written using the canvas HTML5 element. Object oriented programming was used for this project. Bootstrap was used for the overall look, plus a little bit extra for the fullscreen canvas. This project was for a Web Programming
-                            course spring semester 2015 at RU.
+                            An HTML5 Canvas application, written using the canvas HTML5 element. Object oriented programming was used for this project. Bootstrap was used for the overall look, plus a little bit extra for the fullscreen canvas. This project was for a Web Programming course spring semester 2015 at RU.
                         </p>
                     </div>
                 </article>
