font weight on contact

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </p>
 
                 <p class="footer light">
-                    Contact me: <a href="mailto:egillsveinbjorns@gmail.com">egillsveinbjorns@gmail.com</a>
+                    <b>Contact me:</b> <a href="mailto:egillsveinbjorns@gmail.com">egillsveinbjorns@gmail.com</a>
                 </p>
             </div>
 
